# Vata-Engine-Core

./: .dockerignore  .gitignore  README.md  anchor_payload.json  app.py  entrypoint.sh  proof.json  public.json  pyproject.toml  test_crewai_probe.py  test_run.ps1  test_swarm_pipeline.py  verification_key.json
VataAuditSuite/: AdversarialHarness.ps1
VataCoreEngine/: VataCoreEngine.psd1  VataCoreEngine.psm1  VataNetworkClient.psm1  isolation_plane.py
evidence/: MerkleVerifier.sol  merkle_inclusion.circom  mmr_leaves.json  mmr_root_hex.txt  mmr_state.json
tests/: fuzz_test.py  test_distributed_swarm.py  test_kernel.py  test_zk.py
tests/probes/: test_distributed_swarm.py  test_real_langgraph_probe.py
tests/redteam/: regressions_minimized.txt
tests/verification/: verify_anchor_proof.py  verify_witness_integrity.py
vata/: ANCHOR_LOG_B60_B71.csv  b99_results.csv
vata_kernel/: __init__.py  core.py  crypto.py  distributed.py  environment.py  epistemic.py  forensics.py  isolation.py  zk_anchor.py
vata_sdk/: wrappers.py
zk-preimage/: map002_root_proof.circom  map002_root_proof_vkey.json  proof_map002.json  public_map002.json
