[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build-meta"

[project]
name = "vata-core-sdk"
version = "0.1.0"
description = "Verifiable Autonomous Trust Architecture (VATA) Core Security Kernel"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["vata_kernel*", "vata_sdk*"]
